# solana-test-diary-indexer

./: .env  .gitignore  Cargo.toml  README.md
migrations/: 20231117190403_init_db.sql
src/: indexer.rs  lib.rs  main.rs  models.rs  settings.rs
src/sqlx_client/: diaries.rs  mod.rs  processed_signatures.rs  records.rs
