[package]
name = "diary-indexer"
version = "0.1.0"
edition = "2021"

[lib]
name = "diary_lib"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
argh = "0.1"
atty = "0.2"
bs58 = "*"
base64 = "0.13"
borsh = "0.10"
bigdecimal = { version = "0.3", features = ["serde"] }
config = { version = "0.13.1", default-features = false, features = ["yaml"] }
dashmap = "5.3.4"
either = "1.6"
futures = { version = "0.3" }
hex = "0.4"
http = "0.2"
itertools = "0.11.0"
num-traits = "0.2"
once_cell = "1.10.0"
parking_lot = {version= "0.12.0" }
rand = "0.8.5"
regex = "1.5"
reqwest = { version = "0.11", features = ["gzip"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha3 = "0.10"
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "postgres", "uuid", "bigdecimal", "offline", "chrono", "json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

thiserror = "1.0.26"
tokio = { version = "1", features = ["sync", "macros", "rt-multi-thread"] }
tryhard = "0.5"

solana-program = "1.16.19"
solana-client = "1.16.19"
solana-transaction-status = "1.16.19"
solana-sdk = "1.16.19"

diary = { git = "https://github.com/serejkaaa512/solana-test-diary.git" }

[dev-dependencies]
temp-env = "0.3.6"
